# ir_and_rgb

./: LIVmapping_ir.cpp  README.md
FAST-LIVO2/Log/: imu.txt
FAST-LIVO2/Log/PCD/: all_downsampled_points.pcd
FAST-LIVO2/config/: avia1.yaml  avia_sjj.yaml  camera.yaml  camera_llk.yaml  ir_img.yaml  test.yaml
FAST-LIVO2/include/: LIVMapper.h  voxel_map.h
FAST-LIVO2/launch/: livox_camera.launch  yuema.launch
mvs_huck/: CMakeLists.txt  package.xml
mvs_huck/include/mvs_camera/: mvs_camera.h
mvs_huck/launch/: mvs_ros.launch  mvs_ros_rviz.launch
mvs_huck/src/: mvs_camera.cpp  mvs_cameraYUV.cpp  mvs_cameraYUV_color.cpp  mvs_cameramono12.cpp
mvs_ros_pkg/config/: left_camera_trigger.yaml
